k8s-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-swift-dynamics-service
spec:
  selector:
    app: test-swift-dynamics
  ports:
    - protocol: TCP
      port: 8100
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-swift-dynamics-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-swift-dynamics
  template:
    metadata:
      labels:
        app: test-swift-dynamics
    spec:
      containers:
        - name: nextjs-app
          image: oasisforsaken/test-swift-dynamics:v1
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-swift-dynamics-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # เพิ่มบรรทัดนี้เพื่อบอกให้ Cert-Manager ทำงาน
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - test-swift-dynamics.elitefund.fun
      secretName: test-swift-dynamics-tls-prod # ชื่อ Secret ใหม่สำหรับใบเซอร์จริง
  rules:
    - host: test-swift-dynamics.elitefund.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-swift-dynamics-service
                port:
                  number: 8100
